<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/ajustes" />

    <RadioGroup
        android:id="@+id/radioGroupOrdenacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/txtOrdenacaoContato"
        app:layout_constraintStart_toStartOf="@+id/txtOrdenacaoContato"
        app:layout_constraintTop_toBottomOf="@+id/txtOrdenacaoContato">

        <RadioButton
            android:id="@+id/radioOrdenacaoAZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ordenacao_a_z" />

        <RadioButton
            android:id="@+id/radioOrdenacaoZA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ordenacao_z_a" />

        <RadioButton
            android:id="@+id/radioOrdenacaoInsercao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ordenacao_insercao" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtOrdenacaoContato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        android:text="@string/ordenacao_contatos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>